test/Errors/expected_theorem.elab
Axiom only_axiom : Prop